problem with miniship visibility fixed

--- a/src/input.css
+++ b/src/input.css
@@ -12,9 +12,10 @@ body {
             left: calc(50% - 45px); /* Adjust based on text alignment */
             transform: translateX(-50%);
             width: 100px;
-            transition: transform 0.3s ease-in-out;
+            transition:  opacity 0.5s ease-in-out, transform 0.3s ease-in-out;
             z-index: -20;
             animation: float 3s infinite ease-in-out;
+            opacity: 0;
         }
 
 
