--- a/src/output.css
+++ b/src/output.css
@@ -1129,9 +1129,10 @@ body {
   /* Adjust based on text alignment */
   transform: translateX(-50%);
   width: 100px;
-  transition: transform 0.3s ease-in-out;
+  transition:  opacity 0.5s ease-in-out, transform 0.3s ease-in-out;
   z-index: -20;
   animation: float 3s infinite ease-in-out;
+  opacity: 0;
 }
 
 /* Text styling */
